# caesoma.github.io

./: .gitignore  README.md  _config.yml  archive.html  index.html  index.html~  main.css  publications.html  rss.xml  sciphi.html  sciprop.html
src/: build.sh  caesoma.cabal  index.html  publications.md  sciphi.md  sciprop-11-2018.md  sciprop.md  site.hs  stack.yaml
src/_drafts/: 2018-02-22-github-pages-is-asfarasimconcerned-an-amazing-platform.md  2018-03-07-Markov-Chain-Monte-Carlo.md  2018-03-31-mcmc-for-nongaussian-likelihood-gaussianprocesses.md  2018-03-31-nongaussian-likelihoods-or-classification.md  2018-06-14-parametric-models.md  2018-06-20-random-interlude.md  2018-06-22-in-defense-of-linear-models.md  2018-07-01-unintuitive-biomathematical-results.md  2018-07-04-IsaacNewton-was-a-petty-little-fuck.md  a-draft-post.md
src/css/: default.css
src/files/: RandomNormalArray_Seq.py  threechannel_gaussianprocess.py
src/posts/: 2018-02-22-introduction-disclaimer.md  2018-04-09-not-just-the-scientific-paper-is-obsolete.md  2018-04-11-multichannel-gaussian-processes-pt1.md  2018-05-17-mathjax-test.md  2018-06-20-random-interlude.md  2018-07-28-programming-for-natural-scientists.md  2018-09-30-random-interlude.md  2018-11-26-parametric-models.md  2019-07-31-ego-free-science.md  2019-08-01-StanCon-gaussian-processes.md  2020-06-13-coronavirus.md  2020-07-16-imunidade-de-rebanho.md  2026-03-04-anthropic-barcelona.md  2026-03-04-anthropic-barcelona.md~  2026-03-04-pose.md  2026-03-06-lmm-stats-science.md  template.txt
src/templates/: default.html  post.html
(+153 files in other folders)
